Added new tune of the week

--- a/chords.html
+++ b/chords.html
@@ -308,6 +308,10 @@
             >: Horo, A
           </li>
           <li class="tune-name">
+            <a href="./musicFiles/chords/macarthur-road-chords.html">MacArthur Road</a>: Reel, E
+          
+          </li>
+          <li class="tune-name">
             <a href="./musicFiles/chords/maison-de-glace.html"
               >Maison De Glace</a
             >: Jig, D
