--- a/sessionClass.html
+++ b/sessionClass.html
@@ -92,12 +92,12 @@
       <div class="tunes-week tunes-container">
         <h3 class="centered-content sub-heading">Tune of the week:</h3>
         <p class="tune-name">
-          <a href="Tunes/grey-owl.html">Grey Owl</a>
+          <a href="Tunes/little-david-seats-the-bride.html"
+            >Little David Seats The Bride</a>
         </p>
         <h3 class="centered-content sub-heading">Up Next:</h3>
         <p class="tune-name">
-          <a href="Tunes/little-david-seats-the-bride.html"
-            >Little David Seats The Bride</a>
+          <a href="Tunes/macarthur-road.html">MacArthur Road</a>
         </p>
       </div>
       <div>
@@ -306,6 +306,10 @@
               target="_blank"
               >The Green Cake</a
             >: Reel, F#m
+          </li>
+          <li class="tune-name">
+            <a href="Tunes/grey-owl.html">Grey Owl</a>:
+            Reel, D
           </li>
           <li class="tune-name">
             <a href="./Tunes/hag-at-the-churn.html">Hag At The Churn</a>: Jig,
