Added an extra tune of the week

--- a/chords.html
+++ b/chords.html
@@ -346,6 +346,10 @@
             Freygish
           </li>
           <li class="tune-name">
+            <a href="./musicFiles/chords/old-hag-you-have-killed-me-chords.html"
+              >Old Hag You Have Killed Me</a>: Jig, Dmix
+          </li>
+          <li class="tune-name">
             <a href="./musicFiles/chords/l'orientale-chords.html"
               >L'Orientale</a
             >
