--- a/sessionClass.html
+++ b/sessionClass.html
@@ -97,7 +97,8 @@
         </p>
         <h3 class="centered-content sub-heading">Up Next:</h3>
         <p class="tune-name">
-          <a href="Tunes/macarthur-road.html">MacArthur Road</a>
+          <a href="Tunes/macarthur-road.html">MacArthur Road</a>, 
+          <a href="Tunes/old-hag-you-have-killed-me.html">Old Hag You Have Killed Me</a>
         </p>
       </div>
       <div>
