Added new tune of the week and chords

--- a/chords.html
+++ b/chords.html
@@ -360,6 +360,10 @@
             >: Reel, G
           </li>
           <li class="tune-name">
+            <a href="./musicFiles/chords/planxty-hewletts-chords.html"
+              >Planxty Hewlett</a>: Waltz, D
+          </li>
+          <li class="tune-name">
             <a href="./musicFiles/chords/polonas-de-sexdrega-chords.html">Polonäs de Sexdrega</a>
             : Polonäs, G
           </li>
