--- a/sessionClass.html
+++ b/sessionClass.html
@@ -92,13 +92,12 @@
       <div class="tunes-week tunes-container">
         <h3 class="centered-content sub-heading">Tune of the week:</h3>
         <p class="tune-name">
-          <a href="Tunes/little-david-seats-the-bride.html"
-            >Little David Seats The Bride</a>
+          <a href="Tunes/macarthur-road.html">MacArthur Road</a>, 
+          <a href="Tunes/old-hag-you-have-killed-me.html">Old Hag You Have Killed Me</a>
         </p>
         <h3 class="centered-content sub-heading">Up Next:</h3>
         <p class="tune-name">
-          <a href="Tunes/macarthur-road.html">MacArthur Road</a>, 
-          <a href="Tunes/old-hag-you-have-killed-me.html">Old Hag You Have Killed Me</a>
+          <a href="https://thesession.org/tunes/1468">Planxty Hewlett</a>
         </p>
       </div>
       <div>
@@ -397,6 +396,10 @@
             <a href="https://thesession.org/tunes/566" target="_blank"
               >The Little Beggarman</a
             >: Hornpipe, A mix
+          </li>
+          <li class="tune-name">
+            <a href="Tunes/little-david-seats-the-bride.html"
+            >Little David Seats The Bride</a>: D Freygish
           </li>
           <li class="tune-name">
             <a href="./Tunes/limousin-mazurka.html">Limousin Mazurka</a>:
