Added extra tune of the week and chords

--- a/chords.html
+++ b/chords.html
@@ -360,6 +360,11 @@
             >: Reel, G
           </li>
           <li class="tune-name">
+            <a href="./musicFiles/chords/over-the-waterfall-chords.html"
+              >Over The Waterfall</a
+            >: Breakdown, D
+          </li>
+          <li class="tune-name">
             <a href="./musicFiles/chords/planxty-hewletts-chords.html"
               >Planxty Hewlett</a>: Waltz, D
           </li>
