--- a/musicFiles/chords/over-the-waterfall-chords.html
+++ b/musicFiles/chords/over-the-waterfall-chords.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Planxty Hewlett's</title>
+    <title>Over the Waterfall</title>
     <link rel="stylesheet" href="../.././styles/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -60,12 +60,11 @@
     <div class="sheetMusicContainer">
       <img
         class="img-tune"
-        src="../.././musicFiles/chords/chord-page/planxty-hewletts-chords.png"
+        src="../.././musicFiles/chords/chord-page/over-the-waterfall-chords.png"
         alt="Sheet music"
       />
     </div>
     <div class="musicPlayer">
-    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/2u6sJn6jOYNjXeG7wD6hEs?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-    </div>
+    
   </body>
 </html>
