--- a/sessionClass.html
+++ b/sessionClass.html
@@ -97,7 +97,8 @@
         </p>
         <h3 class="centered-content sub-heading">Up Next:</h3>
         <p class="tune-name">
-          <a href="https://thesession.org/tunes/1468">Planxty Hewlett</a>
+          <a href="https://thesession.org/tunes/1468">Planxty Hewlett</a>,
+          <a href="Tunes/over-the-waterfall.html">Over The Waterfall</a>
         </p>
       </div>
       <div>
