--- a/sessionClass.html
+++ b/sessionClass.html
@@ -92,13 +92,12 @@
       <div class="tunes-week tunes-container">
         <h3 class="centered-content sub-heading">Tune of the week:</h3>
         <p class="tune-name">
-          <a href="Tunes/macarthur-road.html">MacArthur Road</a>, 
-          <a href="Tunes/old-hag-you-have-killed-me.html">Old Hag You Have Killed Me</a>
+          <a href="https://thesession.org/tunes/1468">Planxty Hewlett</a>,
+          <a href="Tunes/over-the-waterfall.html">Over The Waterfall</a>
         </p>
         <h3 class="centered-content sub-heading">Up Next:</h3>
         <p class="tune-name">
-          <a href="https://thesession.org/tunes/1468">Planxty Hewlett</a>,
-          <a href="Tunes/over-the-waterfall.html">Over The Waterfall</a>
+          <a href="Tunes/rosbif.html">Rosbif</a>
         </p>
       </div>
       <div>
@@ -412,6 +411,8 @@
             >: Jig, D
           </li>
           <li class="tune-name">
+            <a href="Tunes/macarthur-road.html">MacArthur Road</a>: Reel, E</li>
+          <li class="tune-name">
             <a href="./Tunes/macedonian-horo.html">Macedonian Horo</a>: Horo, A
           </li>
           <li class="tune-name">
@@ -451,6 +452,9 @@
             <a href="https://thesession.org/tunes/12963" target="_blank"
               >Nigun Atik</a
             >: 4/4, E Freygish
+          </li>
+          <li class="tune-name">
+            <a href="Tunes/old-hag-you-have-killed-me.html">Old Hag You Have Killed Me</a>: Jig, Dmix</li>
           </li>
           <!-- <li class="tune-name">
             <a
