--- a/sessionClass.html
+++ b/sessionClass.html
@@ -97,7 +97,8 @@
         </p>
         <h3 class="centered-content sub-heading">Up Next:</h3>
         <p class="tune-name">
-          <a href="Tunes/rosbif.html">Rosbif</a>
+          <a href="Tunes/rosbif.html">Rosbif</a>, 
+          <a href="https://thesession.org/70">Merrily Kiss The Quaker</a>
         </p>
       </div>
       <div>
