Added chords for Merrily Kiss the Quaker

--- a/chords.html
+++ b/chords.html
@@ -323,6 +323,10 @@
             >: March, G
           </li>
           <li class="tune-name">
+            <a href="./musicFiles/chords/merrily-kiss-the-quaker-chords.html"
+              >Merrily Kiss The Quaker</a>: Slide, G
+          </li>
+          <li class="tune-name">
             <a href="./musicFiles/chords/metsakukkia-chords.html">Metsäkukkia</a
             >: Waltz, Em
           </li>
