--- a/musicFiles/chords/planxty-hewlett-chords.html
+++ b/musicFiles/chords/planxty-hewlett-chords.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Planxty Hewlett's</title>
+    <title>Planxty Hewlett</title>
     <link rel="stylesheet" href="../.././styles/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -60,7 +60,7 @@
     <div class="sheetMusicContainer">
       <img
         class="img-tune"
-        src="../.././musicFiles/chords/chord-page/planxty-hewletts-chords.png"
+        src="../.././musicFiles/chords/chord-page/planxty-hewlett-chords.png"
         alt="Sheet music"
       />
     </div>
