--- a/sessionClass.html
+++ b/sessionClass.html
@@ -92,13 +92,12 @@
       <div class="tunes-week tunes-container">
         <h3 class="centered-content sub-heading">Tune of the week:</h3>
         <p class="tune-name">
-          <a href="https://thesession.org/tunes/1468">Planxty Hewlett</a>,
-          <a href="Tunes/over-the-waterfall.html">Over The Waterfall</a>
+          <a href="Tunes/rosbif.html">Rosbif</a>, 
+          <a href="https://thesession.org/70">Merrily Kiss The Quaker</a>
         </p>
         <h3 class="centered-content sub-heading">Up Next:</h3>
         <p class="tune-name">
-          <a href="Tunes/rosbif.html">Rosbif</a>, 
-          <a href="https://thesession.org/70">Merrily Kiss The Quaker</a>
+          <a href="Tunes/slip-of-a-thing.html">A Slip of a Thing</a>
         </p>
       </div>
       <div>
@@ -476,8 +475,9 @@
               >Over The Moor To Maggie</a
             >: Reel, G
           </li>
+          <li class="tune-name"><a href="Tunes/over-the-waterfall.html">Over The Waterfall</a>: Breakdown, D</li>
           <li class="tune-name">
-            <a href="./Tunes/l'orientale.html">L'Orientale</a>: 2/4
+            <a href="https://thesession.org/tunes/1468">Planxty Hewlett</a>: Waltz, D
           </li>
           <li class="tune-name">
             <a href="Tunes/polonas-de-sexdrega.html">Polonäs de Sexdrega</a>: Polonäs, G
