Added chords for a slip of a thing

--- a/chords.html
+++ b/chords.html
@@ -448,6 +448,10 @@
             >: Polska, G
           </li>
           <li class="tune-name">
+            <a href="./musicFiles/chords/slip-of-a-thing-chords.html"
+              >A Slip Of A Thing</a>: Slip jig, G
+          </li>
+          <li class="tune-name">
             <a href="./musicFiles/chords/da-slockit-light-chords.html"
               >Da Slockit Light</a
             >: March, D
