--- a/sessionClass.html
+++ b/sessionClass.html
@@ -93,7 +93,7 @@
         <h3 class="centered-content sub-heading">Tune of the week:</h3>
         <p class="tune-name">
           <a href="Tunes/rosbif.html">Rosbif</a>, 
-          <a href="https://thesession.org/70">Merrily Kiss The Quaker</a>
+          <a href="https://thesession.org/tunes/70">Merrily Kiss The Quaker</a>
         </p>
         <h3 class="centered-content sub-heading">Up Next:</h3>
         <p class="tune-name">
