Added new tune of the week

--- a/chords.html
+++ b/chords.html
@@ -135,6 +135,10 @@
             <a href="./musicFiles/chords/catharsis.html">Catharsis</a>: Reel, Gm
           </li>
           <li class="tune-name">
+            <a href="./musicFiles/chords/clochard-de-paris-chords.html"
+              >Le Clochard de Paris</a>: Waltz, Dm
+          </li>
+          <li class="tune-name">
             <a href="./musicFiles/chords/crested-hens.html">Crested Hens</a>:
             Waltz, Em
           </li>
