--- a/sessionClass.html
+++ b/sessionClass.html
@@ -92,12 +92,11 @@
       <div class="tunes-week tunes-container">
         <h3 class="centered-content sub-heading">Tune of the week:</h3>
         <p class="tune-name">
-          <a href="Tunes/rosbif.html">Rosbif</a>, 
-          <a href="https://thesession.org/tunes/70">Merrily Kiss The Quaker</a>
+          <a href="Tunes/slip-of-a-thing.html">A Slip of a Thing</a>
         </p>
         <h3 class="centered-content sub-heading">Up Next:</h3>
         <p class="tune-name">
-          <a href="Tunes/slip-of-a-thing.html">A Slip of a Thing</a>
+          <a href="Tunes/clochard-de-paris.html">Le Clochard de Paris</a>
         </p>
       </div>
       <div>
@@ -433,6 +432,9 @@
             >: March, G
           </li>
           <li class="tune-name">
+            <a href="https://thesession.org/tunes/70">Merrily Kiss The Quaker</a>: Slide, G
+          </li>
+          <li class="tune-name">
             <a href="./Tunes/metsakkukia.html">Metsäkukkia</a>: Waltz, Em
           </li>
           <li class="tune-name">
@@ -515,6 +517,9 @@
             <a href="https://thesession.org/tunes/88" target="_blank"
               >The Rolling Waves</a
             >: Jig, D
+          </li>
+          <li class="tune-name">
+            <a href="Tunes/rosbif.html">Rosbif</a>: Waltz, Em
           </li>
           <li class="tune-name">
             <a href="Tunes/roslyn-castle.html">Roslyn Castle</a>: March/Air, Em
