--- a/sessionClass.html
+++ b/sessionClass.html
@@ -96,7 +96,8 @@
         </p>
         <h3 class="centered-content sub-heading">Up Next:</h3>
         <p class="tune-name">
-          <a href="Tunes/clochard-de-paris.html">Le Clochard de Paris</a>
+          <a href="Tunes/clochard-de-paris.html">Le Clochard de Paris</a>,
+          <a href="https://thesession.org/tunes/15">Calliope House</a>
         </p>
       </div>
       <div>
