Added new tune of the week, updated Red Jacket

--- a/Tunes/adje-jano.html
+++ b/Tunes/adje-jano.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Red Jacket</title>
+    <title>Adje Jano</title>
     <link rel="stylesheet" href="../styles/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -14,7 +14,7 @@
     />
   </head>
   <body>
-    <header class="header">
+    <header class="header-tunes">
       <div class="title">
         <h1 class="title-text">
           <a href="../index.html">Whangarei Tunes</a>
@@ -56,44 +56,28 @@
         </li>
       </ul>
     </header>
-    <div class="tuneDescription text">
-      <p>
-        Since this is a polska, I've written it here in 3/4, including an extra
-        version with chords. I've also included a version in 9/8 just in case
-        you'd like to read it without the triplets.
-      </p>
-    </div>
+    <!-- <div class="tuneDescription text">
+      <p></p>
+    </div> -->
     <div class="sheetMusicContainer">
+      <p class="text"></p>
       <img
         class="img-tune"
-        src="../musicFiles/red-jacket1.png"
+        src="../musicFiles/adje-jano.png"
         alt="Sheet music"
       />
     </div>
-    <div class="sheetMusicContainer">
-      <img
-        class="img-tune"
-        src="../musicFiles/red-jacket2.png"
-        alt="Sheet music"
-      />
-    </div>
-    <div class="sheetMusicContainer">
-      <img
-        class="img-tune"
-        src="../musicFiles/red-jacket.png"
-        alt="Sheet music"
-      />
-    </div>
+
     <div class="musicPlayer">
       <iframe
-        style="border-radius: 12px"
-        src="https://open.spotify.com/embed/track/26O04oZfUG54EPYVbbJ0Vi?utm_source=generator"
-        width="100%"
-        height="352"
+        width="560"
+        height="315"
+        src="https://www.youtube.com/embed/VBKrtqejUck?si=YUD2j-2qfeOG4gUv"
+        title="YouTube video player"
         frameborder="0"
-        allowfullscreen=""
-        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
-        loading="lazy"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        referrerpolicy="strict-origin-when-cross-origin"
+        allowfullscreen
       ></iframe>
     </div>
   </body>
