--- a/chords.html
+++ b/chords.html
@@ -73,6 +73,9 @@
             : Jig, G
           </li>
           <li class="tune-name">
+            <a href="./musicFiles/chords/adje-jano-chords.html">Adje Jano</a>: Dm, 7/8
+          </li>
+          <li class="tune-name">
             <a href="./musicFiles/chords/adventspolksa.html">Adventspolksa</a>
             : Polska, G
           </li>
