--- a/musicFiles/chords/adje-jano-chords.html
+++ b/musicFiles/chords/adje-jano-chords.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Red Jacket</title>
-    <link rel="stylesheet" href="../styles/styles.css" />
+    <title>Adje Jano</title>
+    <link rel="stylesheet" href="../.././styles/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -14,41 +14,41 @@
     />
   </head>
   <body>
-    <header class="header">
+    <header class="header-tunes">
       <div class="title">
         <h1 class="title-text">
-          <a href="../index.html">Whangarei Tunes</a>
+          <a href="../.././index.html">Whangarei Tunes</a>
         </h1>
       </div>
       <ul class="nav">
         <li class="nav-item">
-          <a class="nav-name" href="../tunes.html">Tunes</a>
+          <a class="nav-name" href="../.././tunes.html">Tunes</a>
           <div class="dropdown-menu">
             <ul class="dropdown">
               <li class="dropdown-item">
-                <a href="../sessionClass.html">Session Class</a>
+                <a href="../.././sessionClass.html">Session Class</a>
               </li>
               <li class="dropdown-item">
-                <a href="../fridayTunes.html">Friday Tunes</a>
+                <a href="../.././fridayTunes.html">Friday Tunes</a>
               </li>
             </ul>
           </div>
         </li>
         <li class="nav-item">
-          <a class="nav-name" href="../resources.html">Resources</a>
+          <a class="nav-name" href="../.././resources.html">Resources</a>
         </li>
         <!-- <li class="nav-item">
-          <a class="nav-name" href="../articles.html">Articles</a>
+          <a class="nav-name" href="../.././articles.html">Articles</a>
         </li> -->
         <li class="nav-item">
-          <a class="nav-name" href="../chords.html">Chords</a>
+          <a class="nav-name" href="../.././chords.html">Chords</a>
         </li>
         <li class="nav-item">
           <a
             href="https://www.facebook.com/groups/whangareifolkrootstraditionalmusic"
             target="_blank"
             ><img
-              src="../images/facebook.png"
+              src="../.././images/facebook.png"
               alt="facebook logo"
               width="17"
               height="17"
@@ -56,44 +56,24 @@
         </li>
       </ul>
     </header>
-    <div class="tuneDescription text">
-      <p>
-        Since this is a polska, I've written it here in 3/4, including an extra
-        version with chords. I've also included a version in 9/8 just in case
-        you'd like to read it without the triplets.
-      </p>
     </div>
     <div class="sheetMusicContainer">
       <img
         class="img-tune"
-        src="../musicFiles/red-jacket1.png"
-        alt="Sheet music"
-      />
-    </div>
-    <div class="sheetMusicContainer">
-      <img
-        class="img-tune"
-        src="../musicFiles/red-jacket2.png"
-        alt="Sheet music"
-      />
-    </div>
-    <div class="sheetMusicContainer">
-      <img
-        class="img-tune"
-        src="../musicFiles/red-jacket.png"
+        src="../.././musicFiles/chords/chord-page/adje-jano-chords.jpg"
         alt="Sheet music"
       />
     </div>
     <div class="musicPlayer">
       <iframe
-        style="border-radius: 12px"
-        src="https://open.spotify.com/embed/track/26O04oZfUG54EPYVbbJ0Vi?utm_source=generator"
-        width="100%"
-        height="352"
+        width="560"
+        height="315"
+        src="https://www.youtube.com/embed/VBKrtqejUck?si=YUD2j-2qfeOG4gUv"
+        title="YouTube video player"
         frameborder="0"
-        allowfullscreen=""
-        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
-        loading="lazy"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        referrerpolicy="strict-origin-when-cross-origin"
+        allowfullscreen
       ></iframe>
     </div>
   </body>
