--- a/sessionClass.html
+++ b/sessionClass.html
@@ -92,12 +92,12 @@
       <div class="tunes-week tunes-container">
         <h3 class="centered-content sub-heading">Tune of the week:</h3>
         <p class="tune-name">
-          <a href="Tunes/slip-of-a-thing.html">A Slip of a Thing</a>
+          <a href="Tunes/clochard-de-paris.html">Le Clochard de Paris</a>,
+          <a href="https://thesession.org/tunes/15">Calliope House</a>
         </p>
         <h3 class="centered-content sub-heading">Up Next:</h3>
         <p class="tune-name">
-          <a href="Tunes/clochard-de-paris.html">Le Clochard de Paris</a>,
-          <a href="https://thesession.org/tunes/15">Calliope House</a>
+          <a href="Tunes/adje-jano.html">Adje Jano</a>
         </p>
       </div>
       <div>
@@ -569,6 +569,9 @@
           <li class="tune-name">
             <a href="https://thesession.org/tunes/1863">Da Slockit Light</a>:
             March, D
+          </li>
+          <li class="tune-name">
+            <a href="Tunes/slip-of-a-thing.html">A Slip of a Thing</a>: Slip jig, G
           </li>
           <li class="tune-name">
             <a href="https://thesession.org/tunes/9196" target="_blank"
