--- a/sessionClass.html
+++ b/sessionClass.html
@@ -97,7 +97,8 @@
         </p>
         <h3 class="centered-content sub-heading">Up Next:</h3>
         <p class="tune-name">
-          <a href="Tunes/adje-jano.html">Adje Jano</a>
+          <a href="Tunes/adje-jano.html">Adje Jano</a>, 
+          <a href="Tunes/grastuno-bal.html">Grastûno bal</a>
         </p>
       </div>
       <div>
