--- a/sessionClass.html
+++ b/sessionClass.html
@@ -92,13 +92,12 @@
       <div class="tunes-week tunes-container">
         <h3 class="centered-content sub-heading">Tune of the week:</h3>
         <p class="tune-name">
-          <a href="Tunes/clochard-de-paris.html">Le Clochard de Paris</a>,
-          <a href="https://thesession.org/tunes/15">Calliope House</a>
+          <a href="Tunes/adje-jano.html">Adje Jano</a>, 
+          <a href="Tunes/grastuno-bal.html">Grastûno bal</a>
         </p>
         <h3 class="centered-content sub-heading">Up Next:</h3>
         <p class="tune-name">
-          <a href="Tunes/adje-jano.html">Adje Jano</a>, 
-          <a href="Tunes/grastuno-bal.html">Grastûno bal</a>
+          <a href="Tunes/iiris-valssi.html">Iiris valssi</a>
         </p>
       </div>
       <div>
@@ -196,6 +195,9 @@
             >: Slip jig, Em
           </li>
           <li class="tune-name">
+            <a href="https://thesession.org/tunes/15">Calliope House</a>: Jig, E
+          </li>
+          <li class="tune-name">
             <a href="https://thesession.org/tunes/273" target="_blank"
               >The Castle</a
             >: Jig, Am
@@ -204,6 +206,9 @@
             <a href="https://thesession.org/tunes/703" target="_blank"
               >Catharsis</a
             >: Reel, Gm
+          </li>
+          <li class="tune-name">
+            <a href="Tunes/clochard-de-paris.html">Le Clochard de Paris</a>: Waltz, Dm
           </li>
           <li class="tune-name">
             <a href="https://thesession.org/tunes/6697" target="_blank"
