Added new tune of the week

--- a/chords.html
+++ b/chords.html
@@ -138,6 +138,9 @@
             <a href="./musicFiles/chords/catharsis.html">Catharsis</a>: Reel, Gm
           </li>
           <li class="tune-name">
+            <a href="./musicFiles/chords/chinquapin-hunting-chords.html">Chinquapin Hunting</a>: Reel, A
+          </li>
+          <li class="tune-name">
             <a href="./musicFiles/chords/clochard-de-paris-chords.html"
               >Le Clochard de Paris</a>: Waltz, Dm
           </li>
