--- a/sessionClass.html
+++ b/sessionClass.html
@@ -92,12 +92,11 @@
       <div class="tunes-week tunes-container">
         <h3 class="centered-content sub-heading">Tune of the week:</h3>
         <p class="tune-name">
-          <a href="Tunes/adje-jano.html">Adje Jano</a>, 
-          <a href="Tunes/grastuno-bal.html">Grastûno bal</a>
+          <a href="Tunes/iiris-valssi.html">Iiris valssi</a>
         </p>
         <h3 class="centered-content sub-heading">Up Next:</h3>
         <p class="tune-name">
-          <a href="Tunes/iiris-valssi.html">Iiris valssi</a>
+          <a href="Tunes/chinquapin-hunting.html">Chinquapin Hunting</a>
         </p>
       </div>
       <div>
@@ -105,6 +104,9 @@
         <ul>
           <li class="tune-name">
             <a href="./Tunes/30-ars-jiggen.html">30-Års Jiggen</a>: Jig, G
+          </li>
+          <li class="tune-name">
+            <a href="Tunes/adje-jano.html">Adje Jano</a>: Dm, 7/8
           </li>
           <li class="tune-name">
             <a href="./Tunes/adventspolska.html">Adventspolska</a>: Polksa, G
@@ -305,6 +307,9 @@
             <a href="https://thesession.org/tunes/878"
             target="_blank">Da Full Rigged Ship</a>: Jig, Am
         </p>
+          </li>
+          <li class="tune-name">
+            <a href="Tunes/grastuno-bal.html">Grastûno bal</a>: Dm
           </li>
           <li class="tune-name">
             <a
