--- a/musicFiles/chords/little-miss-ladybird-chords.html
+++ b/musicFiles/chords/little-miss-ladybird-chords.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Over the Waterfall</title>
+    <title>Little Miss Ladybird</title>
     <link rel="stylesheet" href="../.././styles/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -60,11 +60,13 @@
     <div class="sheetMusicContainer">
       <img
         class="img-tune"
-        src="../.././musicFiles/chords/chord-page/over-the-waterfall-chords.png"
+        src="../.././musicFiles/chords/chord-page/little-miss-ladybird-chords.png"
         alt="Sheet music"
       />
     </div>
-    <div class="musicPlayer"></div>
+    <div class="musicPlayer">
+      <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/0WZQC7bOxKgtHWj4x3qzhl?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+    </div>
     
   </body>
 </html>
