--- a/sessionClass.html
+++ b/sessionClass.html
@@ -92,11 +92,11 @@
       <div class="tunes-week tunes-container">
         <h3 class="centered-content sub-heading">Tune of the week:</h3>
         <p class="tune-name">
-          <a href="Tunes/iiris-valssi.html">Iiris valssi</a>
+          <a href="Tunes/chinquapin-hunting.html">Chinquapin Hunting</a>
         </p>
         <h3 class="centered-content sub-heading">Up Next:</h3>
         <p class="tune-name">
-          <a href="Tunes/chinquapin-hunting.html">Chinquapin Hunting</a>
+          <a href="Tunes/little-miss-ladybird.html">Little Miss Ladybird</a>
         </p>
       </div>
       <div>
@@ -346,6 +346,9 @@
           </li>
           <li class="tune-name">
             <a href="./Tunes/inion-ni-scannlain.html">Iníon Ní Scannláin</a>: 3/4, D
+          </li>
+          <li class="tune-name">
+            <a href="Tunes/iiris-valssi.html">Iiris valssi</a>: Em, 3/4
           </li>
           <li class="tune-name">
             <a href="https://thesession.org/tunes/445" target="_blank"
