--- a/sessionClass.html
+++ b/sessionClass.html
@@ -92,12 +92,11 @@
       <div class="tunes-week tunes-container">
         <h3 class="centered-content sub-heading">Tune of the week:</h3>
         <p class="tune-name">
-          <a href="Tunes/iiris-valssi.html">Iiris valssi</a>
-        </p>
-        <h3 class="centered-content sub-heading">Up Next:</h3>
-        <p class="tune-name">
           <a href="Tunes/chinquapin-hunting.html">Chinquapin Hunting</a>,
           <a href="Tunes/little-miss-ladybird.html">Little Miss Ladybird</a>
+        <h3 class="centered-content sub-heading">Up Next:</h3>
+        <p class="tune-name">
+          <a href="Tunes/copsa-mica.html">Copşa Mică</a>
         </p>
       </div>
       <div>
