Added new tune for the week - music for a found harmonium

--- a/chords.html
+++ b/chords.html
@@ -145,7 +145,7 @@
               >Le Clochard de Paris</a>: Waltz, Dm
           </li>
           <li class="tune-name">
-            <a href="./musicFiles/chords/copsa-mica-chords.html">Copșa Mică</a>: 4/4, Dm
+            <a href="./musicFiles/chords/copsa-mica-chords.html">Copșa Mică</a>: Schottische, Dm</li>
           <li class="tune-name">
             <a href="./musicFiles/chords/crested-hens.html">Crested Hens</a>:
             Waltz, Em
@@ -354,7 +354,9 @@
               >Misirlou</a
             >: D Freygish
           </li>
-          <li class="tune-name">
+            <li class="tune-name">
+              <a href="./musicFiles/chords/music-for-a-found-harmonium-chords.html">Music For A Found Harmonium</a>: Reel, D</li>
+            <li class="tune-name">
             <a href="./musicFiles/chords/musical-priest.html"
               >The Musical Priest</a
             >: Reel, Bm
