--- a/sessionClass.html
+++ b/sessionClass.html
@@ -92,11 +92,10 @@
       <div class="tunes-week tunes-container">
         <h3 class="centered-content sub-heading">Tune of the week:</h3>
         <p class="tune-name">
-          <a href="Tunes/chinquapin-hunting.html">Chinquapin Hunting</a>,
-          <a href="Tunes/little-miss-ladybird.html">Little Miss Ladybird</a>
+          <a href="Tunes/copsa-mica.html">Copşa Mică</a>
         <h3 class="centered-content sub-heading">Up Next:</h3>
         <p class="tune-name">
-          <a href="Tunes/copsa-mica.html">Copşa Mică</a>
+          <a href="Tunes/music-for-a-found-harmonium.html">Music For A Found Harmonium</a>
         </p>
       </div>
       <div>
@@ -209,6 +208,7 @@
               >Catharsis</a
             >: Reel, Gm
           </li>
+          <li class="tune-name"><a href="Tunes/chinquapin-hunting.html">Chinquapin Hunting</a>: Reel, A</li>
           <li class="tune-name">
             <a href="Tunes/clochard-de-paris.html">Le Clochard de Paris</a>: Waltz, Dm
           </li>
@@ -419,6 +419,7 @@
             <a href="./Tunes/limousin-mazurka.html">Limousin Mazurka</a>:
             Mazurka, Em
           </li>
+          <li class="tune-name"><a href="Tunes/little-miss-ladybird.html">Little Miss Ladybird</a>: Jig, D</li>
           <li class="tune-name">
             <a href="https://thesession.org/tunes/8853" target="_blank"
               >Da Lounge Bar</a
