Added new tune of the week with chords

--- a/chords.html
+++ b/chords.html
@@ -160,6 +160,9 @@
             Reel, Em dor
           </li>
           <li class="tune-name">
+            <a href="./musicFiles/chords/la-danse-du-barbier-chords.html">La Danse du Barbier</a>: Reel, G
+          </li>
+          <li class="tune-name">
             <a href="./musicFiles/chords/dans-loudieg-chords.html"
               >Dans Loudieg</a
             >: Am
