--- a/sessionClass.html
+++ b/sessionClass.html
@@ -92,10 +92,10 @@
       <div class="tunes-week tunes-container">
         <h3 class="centered-content sub-heading">Tune of the week:</h3>
         <p class="tune-name">
-          <a href="Tunes/copsa-mica.html">Copşa Mică</a>
+          <a href="Tunes/music-for-a-found-harmonium.html">Music For A Found Harmonium</a>
         <h3 class="centered-content sub-heading">Up Next:</h3>
         <p class="tune-name">
-          <a href="Tunes/music-for-a-found-harmonium.html">Music For A Found Harmonium</a>
+          <a href="Tunes/la-danse-du-barbier.html">La Danse du Barbier</a>
         </p>
       </div>
       <div>
@@ -216,6 +216,9 @@
             <a href="https://thesession.org/tunes/6697" target="_blank"
               >Coffee</a
             >: Jig, Am
+          </li>
+          <li class="tune-name">
+            <a href="Tunes/copsa-mica.html">Copşa Mică</a>: Schottische, Dm
           </li>
           <li class="tune-name">
             <a href="https://thesession.org/tunes/562" target="_blank"
