Updated tunes of the week

--- a/chords.html
+++ b/chords.html
@@ -481,11 +481,14 @@
             >: March, D
           </li>
           <li class="tune-name">
-            <a href="./musicFiles/chords/spootiskerry.html">Spootiskerry</a>:
-            Reel, G
+            <a href="./musicFiles/chords/soggys.html">Soggy's</a>: Slip jig, A
           </li>
           <li class="tune-name">
-            <a href="./musicFiles/chords/soggys.html">Soggy's</a>: Slip jig, A
+            <a href="./musicFiles/chords/speil-klezmer-chords.html">Speil Klezmer</a>: 2/4, Dm
+          </li>
+          <li class="tune-name">
+            <a href="./musicFiles/chords/spootiskerry.html">Spootiskerry</a>:
+            Reel, G
           </li>
           <li class="tune-name">
             <a href="./musicFiles/chords/sto-me-e-milo.html">Sto Me E Milo</a>:
@@ -518,6 +521,9 @@
             <a href="./musicFiles/chords/tripping-up-the-stairs.html"
               >Tripping Up The Stairs</a
             >: Jig, D
+          </li>
+          <li class="tune-name">
+            <a href="./musicFiles/chords/tsizikpolkka-chords.html">Tsizikpolkka</a>: Polka, Bm          
           </li>
           <li class="tune-name">
             <a href="./musicFiles/chords/up-da-stroods-chords.html"
