--- a/sessionClass.html
+++ b/sessionClass.html
@@ -95,7 +95,9 @@
           <a href="Tunes/music-for-a-found-harmonium.html">Music For A Found Harmonium</a>
         <h3 class="centered-content sub-heading">Up Next:</h3>
         <p class="tune-name">
-          <a href="Tunes/la-danse-du-barbier.html">La Danse du Barbier</a>
+          <a href="Tunes/la-danse-du-barbier.html">La Danse du Barbier</a>,
+          <a href="Tunes/tsizikpolkka.html">Tsizikpolkka</a>,
+          <a href="Tunes/speil-klezmer.html">Speil Klezmer</a>
         </p>
       </div>
       <div>
@@ -517,8 +519,7 @@
             <a href="Tunes/ratevka.html">Ratevka</a>: Waltz, Gm
           </li>
           <li class="tune-name">
-            <a href="./Tunes/red-jacket.html">Red Jacket</a>: Slip Jig
-            (Polska?), A
+            <a href="./Tunes/red-jacket.html">Red Jacket</a>: Polska, A
           </li>
           <!-- <li class="tune-name">
             <a
