Added winder slide

--- a/chords.html
+++ b/chords.html
@@ -545,6 +545,8 @@
               >The White Petticoat</a
             >: Jig, Em
           </li>
+          <li class="tune-name">
+            <a href="./musicFiles/chords/winder-slide-chords.html">Winder Slide</a>: 4/4, D
         </ul>
       </div>
     </div>
