--- a/sessionClass.html
+++ b/sessionClass.html
@@ -92,12 +92,13 @@
       <div class="tunes-week tunes-container">
         <h3 class="centered-content sub-heading">Tune of the week:</h3>
         <p class="tune-name">
-          <a href="Tunes/music-for-a-found-harmonium.html">Music For A Found Harmonium</a>
-        <h3 class="centered-content sub-heading">Up Next:</h3>
-        <p class="tune-name">
           <a href="Tunes/la-danse-du-barbier.html">La Danse du Barbier</a>,
           <a href="Tunes/tsizikpolkka.html">Tsizikpolkka</a>,
           <a href="Tunes/speil-klezmer.html">Speil Klezmer</a>
+        </p>
+        <h3 class="centered-content sub-heading">Up Next:</h3>
+        <p class="tune-name">
+          
         </p>
       </div>
       <div>
@@ -460,6 +461,9 @@
           </li>
           <li class="tune-name">
             <a href="./Tunes/misirlou.html">Misirlou</a>: D Freygish
+          </li>
+          <li class="tune-name">
+            <a href="Tunes/music-for-a-found-harmonium.html">Music For A Found Harmonium</a>: 4/4, D
           </li>
           <li class="tune-name">
             <a href="https://thesession.org/tunes/73" target="_blank"
