--- a/sessionClass.html
+++ b/sessionClass.html
@@ -98,7 +98,7 @@
         </p>
         <h3 class="centered-content sub-heading">Up Next:</h3>
         <p class="tune-name">
-          
+          <a href="Tunes/winder-slide.html">Winder Slide</a>
         </p>
       </div>
       <div>
