Added tune of the week, goodnight waltz

--- a/chords.html
+++ b/chords.html
@@ -219,6 +219,9 @@
           <a href="./musicFiles/chords/da-full-rigged-ship-chords.html">Da Full Rigged Ship</a>: Jig, Am
         </li>
         <li class="tune-name">
+          <a href="./musicFiles/chords/goodnight-waltz-chords.html">Goodnight Waltz</a>: Waltz, D freygish
+        </li>
+        <li class="tune-name">
           <a href="./musicFiles/chords/grastuno-bal-chords.html">Grastûno bal</a>: 2/4, Dm
         </li>
           <li class="tune-name">
