--- a/sessionClass.html
+++ b/sessionClass.html
@@ -92,13 +92,11 @@
       <div class="tunes-week tunes-container">
         <h3 class="centered-content sub-heading">Tune of the week:</h3>
         <p class="tune-name">
-          <a href="Tunes/la-danse-du-barbier.html">La Danse du Barbier</a>,
-          <a href="Tunes/tsizikpolkka.html">Tsizikpolkka</a>,
-          <a href="Tunes/speil-klezmer.html">Speil Klezmer</a>
+          <a href="Tunes/winder-slide.html">Winder Slide</a>
         </p>
         <h3 class="centered-content sub-heading">Up Next:</h3>
         <p class="tune-name">
-          <a href="Tunes/winder-slide.html">Winder Slide</a>
+          <a href="Tunes/goodnight-waltz.html">Goodnight Waltz</a>
         </p>
       </div>
       <div>
@@ -238,6 +236,9 @@
           </li>
           <li class="tune-name">
             <a href="./Tunes/dans-loudieg.html">Dans Loudieg</a>: Ronde, Am
+          </li>
+          <li class="tune-name">
+            <a href="Tunes/la-danse-du-barbier.html">La Danse du Barbier</a>: 3/4, G
           </li>
           <li class="tune-name">
             <a href="./Tunes/derriere-chez-nouz.html">Derrière Chez Nous</a>:
@@ -614,6 +615,9 @@
             >: Waltz, G
           </li>
           <li class="tune-name">
+            <a href="Tunes/speil-klezmer.html">Speil Klezmer</a>: 2/4, Dm
+          </li>
+          <li class="tune-name">
             <a href="https://thesession.org/tunes/857" target="_blank"
               >Spootiskerry</a
             >: Reel, G
@@ -656,6 +660,9 @@
           </li>
           <li class="tune-name">
             <a href="./Tunes/les-trois-canards.html">Les Trois Canards</a>: 2/4
+          </li>
+          <li class="tune-name">
+            <a href="Tunes/tsizikpolkka.html">Tsizikpolkka</a>: Polka, D
           </li>
           <li class="tune-name">
             <a href="Tunes/up-da-stroods.html">Up Da Stroods</a>: Reel, D
