Swapped chord sheets as needed, added POB

--- a/chords.html
+++ b/chords.html
@@ -526,6 +526,9 @@
             >: Jig, D
           </li>
           <li class="tune-name">
+            <a href="./musicFiles/chords/les-trois-canards-chords.html">Les Trois Canards</a>: 2/4
+          </li>
+          <li class="tune-name">
             <a href="./musicFiles/chords/tsizikpolkka-chords.html">Tsizikpolkka</a>: Polka, Bm          
           </li>
           <li class="tune-name">
