--- a/musicFiles/chords/les-trois-canards-chords.html
+++ b/musicFiles/chords/les-trois-canards-chords.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Flatbush Waltz</title>
+    <title>Tsizikpolkka</title>
     <link rel="stylesheet" href="../.././styles/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -14,7 +14,7 @@
     />
   </head>
   <body>
-    <header class="header">
+    <header class="header-tunes">
       <div class="title">
         <h1 class="title-text">
           <a href="../.././index.html">Whangarei Tunes</a>
@@ -22,7 +22,7 @@
       </div>
       <ul class="nav">
         <li class="nav-item">
-          <a class="nav-name" href="../../tunes.html">Tunes</a>
+          <a class="nav-name" href="../.././tunes.html">Tunes</a>
           <div class="dropdown-menu">
             <ul class="dropdown">
               <li class="dropdown-item">
@@ -56,39 +56,14 @@
         </li>
       </ul>
     </header>
-    <div class="tuneDescription text">
-      <p>
-        This chart is based on the version from Andy Statman's album (see clip
-        below). The second version, with a capo on the 3rd fret, simply allows
-        you to avoid bar chords.
-      </p>
     </div>
     <div class="sheetMusicContainer">
       <img
         class="img-tune"
-        src="../.././musicFiles/chords/chord-page/flatbush-chords.png"
+        src="../.././musicFiles/chords/chord-page/trois-canards-chords.png"
         alt="Sheet music"
       />
     </div>
-    <div class="sheetMusicContainer">
-      <img
-        class="img-tune"
-        src="../.././musicFiles/chords/chord-page/flatbush2-chords.png"
-        alt="Sheet music"
-      />
-    </div>
-
-    <div class="musicPlayer">
-      <iframe
-        style="border-radius: 12px"
-        src="https://open.spotify.com/embed/track/4RuqCopsefEt7YbFmLUluE?utm_source=generator"
-        width="100%"
-        height="250"
-        frameborder="0"
-        allowfullscreen=""
-        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
-        loading="lazy"
-      ></iframe>
-    </div>
+    
   </body>
 </html>
