--- a/musicFiles/chords/tsizikpolkka-chords.html
+++ b/musicFiles/chords/tsizikpolkka-chords.html
@@ -64,6 +64,14 @@
         alt="Sheet music"
       />
     </div>
+
+    <div class="sheetMusicContainer">
+      <img
+        class="img-tune"
+        src="../.././musicFiles/chords/chord-page/tsizikpolkka2-chords.png"
+        alt="Sheet music"
+      />
+    </div>
     
     <div class="musicPlayer">
       <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/1hiUAudgS6LeBpQtzGZoFO?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
