--- a/sessionClass.html
+++ b/sessionClass.html
@@ -92,11 +92,11 @@
       <div class="tunes-week tunes-container">
         <h3 class="centered-content sub-heading">Tune of the week:</h3>
         <p class="tune-name">
-          <a href="Tunes/winder-slide.html">Winder Slide</a>
+          <a href="Tunes/goodnight-waltz.html">Goodnight Waltz</a>
         </p>
         <h3 class="centered-content sub-heading">Up Next:</h3>
         <p class="tune-name">
-          <a href="Tunes/goodnight-waltz.html">Goodnight Waltz</a>
+          <a href="https://thesession.org/tunes/652">The Plains Of Boyle</a>
         </p>
       </div>
       <div>
@@ -484,6 +484,9 @@
           <li class="tune-name">
             <a href="Tunes/old-hag-you-have-killed-me.html">Old Hag You Have Killed Me</a>: Jig, Dmix</li>
           </li>
+          <li class="tune-name">
+            <a href="Tunes/l'orientale.html">L'Orientale</a>
+          </li>
           <!-- <li class="tune-name">
             <a
               href="https://irish.session.nz/tunes-archive/off-to-california/"
@@ -679,6 +682,9 @@
           <li class="tune-name">
             <a href="./Tunes/white-petticoat.html">The White Petticoat</a>: Jig,
             Em
+          </li>
+          <li class="tune-name">
+            <a href="Tunes/winder-slide.html">Winder Slide</a>: 4/4, D
           </li>
           <div class="musicPlayer">
             <iframe
