Added chords for POB

--- a/chords.html
+++ b/chords.html
@@ -396,6 +396,9 @@
             >: Breakdown, D
           </li>
           <li class="tune-name">
+            <a href="./musicFiles/chords/plains-of-boyle-chords.html">Plains Of Boyle</a>: Hornpipe, D 
+          </li>
+          <li class="tune-name">
             <a href="./musicFiles/chords/planxty-hewlett-chords.html"
               >Planxty Hewlett</a>: Waltz, D
           </li>
