Updated site for the end of year

--- a/sessionClass.html
+++ b/sessionClass.html
@@ -92,11 +92,11 @@
       <div class="tunes-week tunes-container">
         <h3 class="centered-content sub-heading">Tune of the week:</h3>
         <p class="tune-name">
-          <a href="Tunes/goodnight-waltz.html">Goodnight Waltz</a>
+          <a href="https://thesession.org/tunes/652">The Plains Of Boyle</a>
         </p>
         <h3 class="centered-content sub-heading">Up Next:</h3>
         <p class="tune-name">
-          <a href="https://thesession.org/tunes/652">The Plains Of Boyle</a>
+          End of Year Review
         </p>
       </div>
       <div>
@@ -314,6 +314,10 @@
             <a href="https://thesession.org/tunes/878"
             target="_blank">Da Full Rigged Ship</a>: Jig, Am
         </p>
+          </li>
+          <li class="tune-name">
+            <a href="Tunes/goodnight-waltz.html">Goodnight Waltz</a>: Waltz,
+            D freygish
           </li>
           <li class="tune-name">
             <a href="Tunes/grastuno-bal.html">Grastûno bal</a>: Dm
