Added walls of liscaroll, edited planxty hewlett chords

--- a/chords.html
+++ b/chords.html
@@ -545,6 +545,9 @@
             >: Waltz, Am
           </li>
           <li class="tune-name">
+            <a href="./musicFiles/chords/walls-of-liscaroll-chords.html">The Walls of Liscaroll</a>: Jig, D
+          </li>
+          <li class="tune-name">
             <a href="./musicFiles/chords/whelans-chords.html"
               >Whelan's</a
             >: Jig, Em
