--- a/sessionClass.html
+++ b/sessionClass.html
@@ -92,11 +92,11 @@
       <div class="tunes-week tunes-container">
         <h3 class="centered-content sub-heading">Tune of the week:</h3>
         <p class="tune-name">
-          <a href="https://thesession.org/tunes/652">The Plains Of Boyle</a>
+          <a href="Tunes/walls-of-liscaroll.html">The Walls of Liscaroll</a>
         </p>
         <h3 class="centered-content sub-heading">Up Next:</h3>
         <p class="tune-name">
-          End of Year Review
+          Have a great holiday break - see you in February!
         </p>
       </div>
       <div>
@@ -511,6 +511,9 @@
             >: Reel, G
           </li>
           <li class="tune-name"><a href="Tunes/over-the-waterfall.html">Over The Waterfall</a>: Breakdown, D</li>
+          <li class="tune-name">
+            <a href="https://thesession.org/tunes/652">The Plains Of Boyle</a>: Hornpipe, D
+          </li>
           <li class="tune-name">
             <a href="https://thesession.org/tunes/1468">Planxty Hewlett</a>: Waltz, D
           </li>
